--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,4 +93,16 @@
         android:textColor="@color/colorWhite"
         android:background="@drawable/signup_button_bg_raduis"
         />
+    <Button
+        android:id="@+id/btnFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Go to Fragment Demo"
+        android:textAlignment="center"
+        android:textSize="16dp"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/signup_button_bg_raduis"
+        />
 </LinearLayout>
