--- a/app/src/main/res/layout/activity_fragments.xml
+++ b/app/src/main/res/layout/activity_fragments.xml
@@ -36,12 +36,20 @@
 
 
     <LinearLayout
-        android:id="@+id/container_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/colorHbg"
+        android:layout_height="match_parent"
+        android:background="@color/colorBg"
+        android:padding="10dp"
         >
+        <LinearLayout
+            android:id="@+id/container_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/colorHbg"
+            android:layout_margin="10dp"
+            >
+        </LinearLayout>
 
     </LinearLayout>
 
